--- a/01_inspect.ipynb
+++ b/01_inspect.ipynb
@@ -1740,7 +1740,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "weird thing that happens: `https://www.indeed.com/q-python-l-new-york-jobs.html` when typing a city name into the url directly rather than running the search. however, results are the same"
+    "Every page is different. E.g., here is a weird thing that happens on this site: When typing a city name into the URL directly rather than running the search, the URL changes to `https://www.indeed.com/q-python-l-new-york-jobs.html`. The results are the same and one refers to the other, so it doesn't matter in this case.\n",
+    "\n",
+    "Always spend time getting to know the page you want to scrape before you start writing code. It saves a lot of time and effort in the long run."
    ]
   },
   {
