--- a/02_scrape.ipynb
+++ b/02_scrape.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "- **Static Websites**\n",
     "- _Hidden Websites_\n",
-    "- _Dynamic Websites_"
+    "- _Dynamic Websites_\n",
+    "\n",
+    "In this course, you will work with a static website. You will also get a high-level overview about the challenges of scraping dynamically generated information and data behind logins."
    ]
   },
   {
@@ -58,8 +60,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You have access to the data from this website. Can you already search for the content that interests you?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -68,12 +77,13 @@
        "401"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# let's try a string search\n",
     "str(response.content).find('python')"
    ]
   },
@@ -101,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tedious and inefficient! That's where **parsing** comes in."
+    "It works, but it is tedious and inefficient! That's where **parsing** and `BeautifulSoup` comes in and makes your life easier. You will learn about that in the next chapter."
    ]
   },
   {
@@ -125,7 +135,7 @@
     "\n",
     "These pages are harder to scrape, because that code needs to be executed before you will see the information you are interested in.\n",
     "\n",
-    "Train this with [requests-html](https://html.python-requests.org/) or [Selenium](https://selenium-python.readthedocs.io/) and our tutorial for [Modern Web Automation with Python and Selenium](https://realpython.com/modern-web-automation-with-python-and-selenium/)"
+    "Train this with [requests-html](https://requests.readthedocs.io/projects/requests-html/en/latest/) or [Selenium](https://selenium-python.readthedocs.io/) and our tutorial for [Modern Web Automation with Python and Selenium](https://realpython.com/modern-web-automation-with-python-and-selenium/)"
    ]
   },
   {
