--- a/03_parse.ipynb
+++ b/03_parse.ipynb
@@ -2231,6 +2231,469 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Find Elements by Class Name and Text Content\n",
+    "\n",
+    "Not all of these are necessarily Python jobs. Let's try to slim it down and look only at jobs that explicitly contain \"Python\" in their name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python_jobs = results.find_all('a', string='Python Developer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hm, that didn't do what you wanted, because `string` looks for _exactly_ that string. Let's make it a bit more general again by passing a _function_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "# no results, becase .string searches the NavigableString element of the direct\n",
+    "# element it is called on, if there's nothing in there, or more than one,\n",
+    "# then it returns None\n",
+    "python_jobs = results.find_all('div', class_='summary',\n",
+    "                               string=re.compile('[p|P]ython'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "# this works because the string argument relates to the exact a tag that actually\n",
+    "# contains the text\n",
+    "python_jobs = results.find_all('a', string=re.compile('[p|P]ython'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a href=\"/salaries/junior-python-developer-Salaries,-New-York-NY\" onmousedown=\"this.href = appendParamsOnce(this.href, '?campaignid=serp-more&amp;fromjk=f8f068da6dd93fa6&amp;from=serp-more');\">Junior Python Developer salaries in New York, NY</a>,\n",
+       " <a href=\"/q-Python-Developer-l-New-York-State-jobs.html\" onmousedown=\"this.href = appendParamsOnce(this.href, '?from=relatedQueries&amp;saIdx=2&amp;rqf=1&amp;parentQnorm=python');\">python developer</a>]"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Junior Python Developer salaries in New York, NY\n",
+      "python developer\n"
+     ]
+    }
+   ],
+   "source": [
+    "for job in python_jobs:\n",
+    "    print(job.text)\n",
+    "\n",
+    "    #print('python' in job.string.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python_jobs = results.find_all('a', class_='jobtitle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(python_jobs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Junior Python Developer\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "GTS\n",
+      "\n",
+      "\n",
+      "\n",
+      "3.7\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "New York, NY 10022 (Midtown area)\n",
+      "\n",
+      "\n",
+      "\n",
+      "GTS accounts for 3-6% of daily cash equities volume in the U.S. and trades over 10,000 different instruments globally, including equities, futures, commodities,…\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "30+ days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all GTS jobs in New York, NY - New York jobsSalary Search: Junior Python Developer salaries in New York, NYLearn more about working at GTSRelated forums: New York New York - Gts\n",
+      "Penetration Testing Trainee (Remote USA)\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "BreachLock\n",
+      "\n",
+      "\n",
+      "Florida, NY\n",
+      "•\n",
+      "Remote work available\n",
+      "\n",
+      "\n",
+      "\n",
+      "BreachLocks’s modern SaaS-based approach redefines the old school and time-consuming pen test model into fast and comprehensive security as service.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "30+ days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all BreachLock jobs in Florida, NY - Florida jobsRelated forums: Florida New York - BreachLock\n",
+      "2020 Internships\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Rosenblatt Securities\n",
+      "\n",
+      "\n",
+      "\n",
+      "3.7\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "New York, NY 10005 (Financial District area)\n",
+      "\n",
+      "\n",
+      "\n",
+      "Rosenblatt Securities is seeking interns for immediate part time and full time summer 2020 to support a rapidly evolving team of equity research analysts on…\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "5 days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all Rosenblatt Securities jobs in New York, NY - New York jobsSalary Search: Intern salaries in New York, NYLearn more about working at Rosenblatt SecuritiesRelated forums: New York New York - Rosenblatt Securities\n",
+      "Business Analyst\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "CITI\n",
+      "\n",
+      "\n",
+      "\n",
+      "3.9\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "New York, NY\n",
+      "\n",
+      "\n",
+      "\n",
+      "One of the functions under the data management group is Voice of the Client (VoC) and is responsible for maintaining a healthy client feedback system primarily…\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Today·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all CITI jobs in New York, NY - New York jobsSalary Search: Business Analyst salaries in New York, NYLearn more about working at CITIExplore career as Business Analyst: overview, career advice, FAQsRelated forums: Business Analyst - New York New York - Citi\n",
+      "Recruitment Solutions Consultant (REMOTE)\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vee Ventures\n",
+      "\n",
+      "\n",
+      "New York State\n",
+      "•\n",
+      "Remote work available\n",
+      "\n",
+      "\n",
+      "\n",
+      "Role: contract basis for 3 months initially with potential to extend as business scales.\n",
+      "This is not a role for a recruiter.\n",
+      "JavaScript coding (Python a plus).\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "7 days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all Vee Ventures jobs in New York State - New York State jobsSalary Search: Recruitment Consultant salaries in New York StateRelated forums: Vee Ventures\n",
+      "Research Associates\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Rosenblatt Securities\n",
+      "\n",
+      "\n",
+      "\n",
+      "3.7\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "New York, NY 10005 (Financial District area)\n",
+      "\n",
+      "\n",
+      "\n",
+      "Rosenblatt Securities is hiring full-time Research Associates to support our research analysts.\n",
+      "You will do primary research such as surveys, web-scraping,…\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "5 days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all Rosenblatt Securities jobs in New York, NY - New York jobsSalary Search: Research Associate salaries in New York, NYLearn more about working at Rosenblatt SecuritiesExplore career as Research Associate: overview, career advice, FAQsRelated forums: New York New York - Rosenblatt Securities\n",
+      "Data Scientist\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Source Enterprises\n",
+      "\n",
+      "\n",
+      "\n",
+      "5.0\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "New York, NY\n",
+      "•\n",
+      "Remote work available\n",
+      "\n",
+      "\n",
+      "\n",
+      "Work with our industry experts to gain unrivaled knowledge at both the strategic level (generating bold and innovative ideas for data science-driven growth) and…\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "30+ days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all Source Enterprises jobs in New York, NY - New York jobsSalary Search: Data Scientist salaries in New York, NYLearn more about working at Source EnterprisesExplore career as Data Scientist: overview, career advice, FAQsRelated forums: New York New York - Source Enterprises\n",
+      "Data Technician (Full- or Part-Time)\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Thasos Group\n",
+      "\n",
+      "\n",
+      "New York, NY 10003 (Greenwich Village area)\n",
+      "\n",
+      "\n",
+      "\n",
+      "The Data Technician role is an entry-level position suitable for someone looking to break into the startup/big data world and gain experience working with top…\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "30+ days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all Thasos Group jobs in New York, NY - New York jobsRelated forums: New York New York - Thasos Group\n",
+      "Associate, Middle Office-Equities\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Santander Bank\n",
+      "\n",
+      "\n",
+      "\n",
+      "3.6\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "New York, NY 11203 (East Flatbush area)\n",
+      "\n",
+      "\n",
+      "\n",
+      "Act as a support for the Equity Cash Desk.\n",
+      "Open trading accounts in various systems.\n",
+      "Act as a liaison between Front and Back Office to coordinate and cooperate…\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "7 days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all Santander Bank jobs in New York, NY - New York jobsSalary Search: Office Assistant salaries in New York, NYLearn more about working at Santander BankExplore career as Office Assistant: overview, career advice, FAQsRelated forums: Associate - New York New York - Santander Bank\n",
+      "Data Scientist\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "QuaEra\n",
+      "\n",
+      "\n",
+      "New York State\n",
+      "\n",
+      "\n",
+      "\n",
+      "We require at least a Master’s degree in a quantitative discipline such as Statistics, Economics, Mathematics, Computer Science or equivalent.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "24 days ago·Save job·More...\n",
+      "\n",
+      "\n",
+      "\n",
+      "View all QuaEra jobs in New York State - New York State jobsSalary Search: Data Scientist salaries in New York StateExplore career as Data Scientist: overview, career advice, FAQsRelated forums: QuaEra\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in python_jobs:\n",
+    "    if j.text != None:\n",
+    "        print(j.text.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extract Attributes From HTML Elements"
    ]
   },
