--- a/04_pipeline.ipynb
+++ b/04_pipeline.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Build A Pipeline\n",
     "\n",
-    "- Combine Your Knowledge of the Site, `requests` and `bs4`\n",
+    "- Combine Your Knowledge of the Website, `requests` and `bs4`\n",
     "- Target the Specific Information You Want\n",
     "- Automate Your Scraping Process"
    ]
