--- a/04_pipeline.ipynb
+++ b/04_pipeline.ipynb
@@ -7,19 +7,20 @@
     "# Your Turn: Build A Pipeline\n",
     "\n",
     "- Combine Your Knowledge of the Website, `requests` and `bs4`\n",
-    "- Automate Your Scraping Process Across Multiple Sites\n",
-    "- Target the Specific Information You Want"
+    "- Automate Your Scraping Process Across Multiple Pages\n",
+    "- Generalize Your Code For Varying Searches\n",
+    "- Target & Save Specific Information You Want"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your tasks:\n",
+    "## Your Tasks:\n",
     "\n",
     "- Scrape the first 100 available search results\n",
     "- Generalize your code to allow searching for different locations/jobs\n",
-    "- Pick out the link, title, and location\n",
+    "- Pick out information about the URL, job title, and job location\n",
     "- Save the results to a file"
    ]
   },
@@ -58,7 +59,7 @@
     "### Part 2: Scrape\n",
     "\n",
     "- Build the code to fetch the first 100 search results. This means you will need to automatically navigate to multiple results pages\n",
-    "- Write functions that allow you specify the job title, location, and amount of results as arguments"
+    "- Write functions that allow you to specify the job title, location, and amount of results as arguments"
    ]
   },
   {
@@ -103,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
