--- a/05_pipeline_solution.ipynb
+++ b/05_pipeline_solution.ipynb
@@ -7,25 +7,26 @@
     "# Possible Solution: Build A Pipeline\n",
     "\n",
     "- Combine Your Knowledge of the Website, `requests` and `bs4`\n",
-    "- Automate Your Scraping Process Across Multiple Sites\n",
-    "- Target the Specific Information You Want"
+    "- Automate Your Scraping Process Across Multiple Pages\n",
+    "- Generalize Your Code For Varying Searches\n",
+    "- Target & Save Specific Information You Want"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Your tasks:\n",
+    "## Your Tasks:\n",
     "\n",
     "- Scrape the first 100 available search results\n",
     "- Generalize your code to allow searching for different locations/jobs\n",
-    "- Pick out the link, title, and location\n",
+    "- Pick out information about the URL, job title, and job location\n",
     "- Save the results to a file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +92,12 @@
     "### Part 2: Scrape\n",
     "\n",
     "- Build the code to fetch the first 100 search results. This means you will need to automatically navigate to multiple results pages\n",
-    "- Write functions that allow you specify the job title, location, and amount of results as arguments"
+    "- Write functions that allow you to specify the job title, location, and amount of results as arguments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,40 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_jobs(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_jobs(4)"
    ]
@@ -174,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,20 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_jobs('python', 'new york', 3)"
    ]
@@ -237,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,29 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Junior Front End / Full Stack Software Engineer',\n",
-       " 'Data Scientist',\n",
-       " 'Data Analysis Intern, Spectrum',\n",
-       " 'Software Engineers & Web Developers',\n",
-       " 'Data Technician (Full- or Part-Time)',\n",
-       " 'Financial Analyst, Revenue Forecasting',\n",
-       " 'Healthcare Data/Reporting Analyst',\n",
-       " 'Online Coding Instructor',\n",
-       " 'Data Journalist',\n",
-       " 'Recruitment Solutions Consultant (REMOTE)']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "job_titles"
    ]
@@ -325,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,29 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.indeed.com/rc/clk?jk=771ec6885c33169f&fccid=00ae4e776f21bc2f&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=ab659a231e0d45b4&fccid=b9d4e9eceb3ff4c0&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=487b30db63184515&fccid=bf0600f0f252b45b&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=f8f068da6dd93fa6&fccid=ca7680692810259a&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=da727c0cddda240e&fccid=56a26d4c816e53d1&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=75304bc19a74f00b&fccid=00ae4e776f21bc2f&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=0094c74f655c2692&fccid=b9d4e9eceb3ff4c0&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=b0b5b23a82f838bf&fccid=8844f3447ed4e2d6&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=3d07c7b81d80f7cc&fccid=e0ccb12bb145acf5&vjs=3',\n",
-       " 'https://www.indeed.com/rc/clk?jk=1ab7622f6a6d24fd&fccid=10c1f2532daaed15&vjs=3']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "job_links"
    ]
@@ -379,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,29 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['New York, NY 10005 (Financial District area)',\n",
-       " 'New York State',\n",
-       " 'Florida, NY',\n",
-       " 'New York, NY 10022 (Midtown area)',\n",
-       " 'New York, NY 10003 (Greenwich Village area)',\n",
-       " 'New York, NY 10005 (Financial District area)',\n",
-       " 'New York State',\n",
-       " 'New York, NY 10010 (Flatiron District area)',\n",
-       " 'New York, NY 10013 (SoHo area)',\n",
-       " 'New York, NY 10014 (West Village area)']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "job_locations"
    ]
@@ -424,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,49 +396,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'title': 'Junior Front End / Full Stack Software Engineer',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=168a00aa137f6f7f&fccid=6a5673a520e27ea2&vjs=3',\n",
-       "  'location': 'New York, NY'},\n",
-       " {'title': 'Data Scientist',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=1636faa0308fd08f&fccid=1577085fc2290983&vjs=3',\n",
-       "  'location': 'New York, NY'},\n",
-       " {'title': 'Data Analysis Intern, Spectrum',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=b0b5b23a82f838bf&fccid=8844f3447ed4e2d6&vjs=3',\n",
-       "  'location': 'New York, NY 10010 (Flatiron District area)'},\n",
-       " {'title': 'Software Engineers & Web Developers',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=597b9830f39b5420&fccid=bc8bf69154b5fc28&vjs=3',\n",
-       "  'location': 'New York, NY'},\n",
-       " {'title': 'Data Technician (Full- or Part-Time)',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=da727c0cddda240e&fccid=56a26d4c816e53d1&vjs=3',\n",
-       "  'location': 'New York, NY 10003 (Greenwich Village area)'},\n",
-       " {'title': 'Financial Analyst, Revenue Forecasting',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=1ab7622f6a6d24fd&fccid=10c1f2532daaed15&vjs=3',\n",
-       "  'location': 'New York, NY 10014 (West Village area)'},\n",
-       " {'title': 'Healthcare Data/Reporting Analyst',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=5622723d2b09fd30&fccid=d7bd51c63266d60a&vjs=3',\n",
-       "  'location': 'New York, NY'},\n",
-       " {'title': 'Online Coding Instructor',\n",
-       "  'link': 'https://www.indeed.com/company/CodeWizardsHQ/jobs/Online-Coding-Instructor-f8ba4ab836c8ac6e?fccid=e5a6700aae0be288&vjs=3',\n",
-       "  'location': 'New York, NY'},\n",
-       " {'title': 'Data Journalist',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=1a51173c945acc92&fccid=e35c5b96d66d895e&vjs=3',\n",
-       "  'location': 'New York, NY 10012 (SoHo area)'},\n",
-       " {'title': 'Recruitment Solutions Consultant (REMOTE)',\n",
-       "  'link': 'https://www.indeed.com/rc/clk?jk=6d0fd32330817b97&fccid=fc92bf1cef03c1d0&vjs=3',\n",
-       "  'location': 'New York State'}]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results"
    ]
@@ -544,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,42 +437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Senior Systems Engineer',\n",
-       " 'link': 'https://www.indeed.com/rc/clk?jk=8116931b8cfe9ce1&fccid=46a5105b06a6bafb&vjs=3',\n",
-       " 'location': 'New York State'}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r[42]"
    ]
@@ -613,6 +457,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "### Keep Expanding!\n",
     "\n",
     "Currently you are only fetching the title, link and location of the job. Change that to get also get the **company name**. Maybe you also want to know the beginning of the **text blurb** what the job is about? You could also build this script out to follow the links you gathered and fetch the individual job listing details pages for even more information.\n",
@@ -644,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
